# OpenGLStuffs

./: .gitmodules  CMakeLists.txt  README.md
assets/: FragmentShader.glsl  VertexShader.glsl
src/: main.cpp
src/Basic/: GLFWWindow.cpp  GLFWWindow.h  Input.h
src/Renderer/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
